--- a/Assignment_11.ipynb
+++ b/Assignment_11.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#load digits\n",
+    "#Save x and y as dataframes. \n",
     "digit = load_digits()\n",
     "x = digit.data\n",
     "y = digit.target"
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- #### Split the dataset into training and testing sets."
+    "#### Split the dataset into training and testing sets."
    ]
   },
   {
@@ -69,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- #### KNN ALgorithm"
+    "#### KNN ALgorithm"
    ]
   },
   {
@@ -236,6 +236,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### KNN Score:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -254,13 +261,6 @@
    "source": [
     "knn.score(X_test,y_test)*100"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
