Support Vector Machine

--- a/Assignment_13.ipynb
+++ b/Assignment_13.ipynb
@@ -62,7 +62,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Use SVM with kernels:\n",
+    "- Use SVM with kernels:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### (a) kernel = \"Linear\""
    ]
   },
